k8s/apps/jenkins/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: cwx
spec:
  selector:
    app: jenkins
  ports:
  - name: web
    port: 80
    targetPort: 8080
