k8s/apps/jenkins/IngressRoute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jenkins
  namespace: cwx
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jenkins.chenwx.top`)
      kind: Rule
      services:
        - name: jenkins
          namespace: cwx
          port: 80
